chapter-08/CatalogApp/frontend_node/kubespec/meshspec/frontendnodeMeshApp.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: frontend-node
  namespace: prodcatalog-ns
spec:
  awsName: frontend-node.prodcatalog-ns.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: frontend-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-node
  namespace: prodcatalog-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-node
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: '/stats/prometheus'
      labels:
        app: frontend-node
    spec:
      serviceAccountName: prodcatalog-envoy-proxies
      containers:
        - name: frontend-node
          image: "${REPOSITORY_URI}"
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /ping
              port: 9000
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ping
              port: 9000
            successThreshold: 3
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  #annotations:
  # This annotation is only required if you are creating an internal facing ELB. Remove this annotation to create public facing ELB.
  #service.beta.kubernetes.io/aws-load-balancer-internal: "true"
  name: frontend-node
  namespace: prodcatalog-ns
  labels:
    app: frontend-node
spec:
  ports:
    - name: "http"
      port: 9000
      targetPort: 9000
  selector:
    app: frontend-node
